tests/negative/test_data_name_taken.orb
fnc foo() () {};

data foo {
    x:i32
};

fnc main() () {};